crates/sizeof/negative_tests/notsizeof.stderr
error[E0599]: no method named `dynamic_size` found for struct `NotSizeOf` in the current scope
 --> negative_tests/notsizeof.rs:9:5
  |
2 | struct NotSizeOf {
  | ---------------- method `dynamic_size` not found for this struct
...
9 |     b: NotSizeOf,
  |     ^ method not found in `NotSizeOf`
  |
  = help: items from traits can only be used if the trait is implemented and in scope
  = note: the following trait defines an item `dynamic_size`, perhaps you need to implement it:
          candidate #1: `SizeOf`
help: some of the expressions' fields have a method of the same name
  |
9 |     a.b: NotSizeOf,
  |     ++
9 |     b.b: NotSizeOf,
  |     ++
